# brain

./: .gitignore  INPROGRESS.md  README.md  Taskfile.yml  go.mod  go.sum  install.cmd  install.sh  main.go
.claude/skills/brain/: SKILL.md
.github/workflows/: ci.yml  release.yml
clis/go/brain/: check_test.go  conformance_ceo_test.go  conviction_visibility_test.go  endpoints.go  endpoints_test.go  evolve.go  main.go  migration_test.go  record_fromfile_test.go  record_fromurl_test.go  skill_cmds.go  state.go  state_test.go  wake.go  wake_test.go
cmd/brain/: endpoints.go  endpoints_test.go  main.go
conformance/cases/: shield.json
docs/: BRAIN.md  CROSS-ORGAN-CONTRACT.md  MIGRATION-flat-files.md  SPEC-orientation-layer-v1.md  SPEC-record-from-file-v1.md  SPEC-record-from-url-v1.md  SPEC-self-evolving-v1.md  SPEC-shield-conformance-v1.md  SPEC-shield-signal-provenance-v1.md
docs/research/: brain-design.md  memory-brain-research.md
engine/: brain.go  consolidate.go  conviction.go  shield.go  text.go
libs/go/engine/: brain.go  brain_test.go  conformance_test.go  consolidate.go  consolidate_test.go  conviction_test.go  playbook.go  playbook_test.go  primitives.go  shield.go  shield_test.go  skilllib.go  store.go  (+2 more)
libs/python/brain_shield/: pyproject.toml
libs/python/brain_shield/src/brain_shield/: __init__.py  shield.py
libs/python/brain_shield/tests/: test_conformance.py  test_shield.py
libs/rust/brain-shield/: Cargo.toml
libs/rust/brain-shield/src/: lib.rs
libs/rust/brain-shield/tests/: conformance.rs
skill/: SKILL.md
skills/brain/: SKILL.md
(+25 files in other folders)
