[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brain-shield"
version = "0.1.0"
description = "Deterministic constraint shield for brain — a fail-closed veto over decisions, ported from libs/go/engine/shield.go."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/brain_shield"]
