[package]
name = "brain-shield"
version = "0.1.0"
edition = "2021"
description = "Deterministic constraint shield (veto/penalty/alarm) for brain — Rust port of libs/go/engine/shield.go"
license = "MIT"

[dependencies]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
